# BrickBuilder

./: .gitignore  README.md  feature_plan.md  main.py  pyproject.toml  run_app.py
src/brickbuilder/: main.py
src/brickbuilder/core/: brick.py  camera.py  colors.py  model.py  picking.py  renderer.py  tools.py
src/brickbuilder/ui/: main_window.py  viewport.py
